RadioFactory.swift - rename file & class to Discovery
Discovery.swift - converted Discovery class to a Singleton
Api.swift - removed discoveredRadios var (use Discovery singleton)
Api.swift - added initialization of Discovery in init()
RadioCommands.swift - added sending of "client bind client_id=\(clientId)" on boundClientId
GuiClient.swift - changed clientId var from UUID? to String?


v2.5.1.2019_07_25

AppExtensions.swift - refactored isForThisClient(_:) to parse properties looking for the client handle
All Streams - modified to use changed isForThisClient(_:)
RadioFactory.swift - changed == for DiscoveredRadio to include model
Various - removed static command definitions, replaced with literal strings
Vita.swift - removed GuiClient class
GuiClient.swift - added
Profile.swift - added check for correct profile type in class parseStatus(_:radio:queue:inUse:)


v2.5.1.2019_07_17

RadioFactory.swift - removed debug print statement
Radio.swift - in parseStatus(_:) added remote_audio_rx and tx cases (not fully implemented)
Radio.swift - in parseStatus(_:) replaced fatalError() with _log.msg(....)
Opus.swift - removed
OpusCommands.swift - removed
RemoteRxAudioStream.swift - added
RemoteRxAudioStreamCommands.swift - added
RemoteTxAudioStream.swift - added
RemoteTxAudioStreamCommands.swift - added
DaxRxAudioStream.swift - removed func isStatusForThisClient(_:)
AppExtensions.swift - added func isForThisClient(_:) to replace isStatusForThisClient(_:)
ALL Streams - changed the way streams are removed
Notifications.swift - added remoteRxAudioStreamHasBeenAdded & remoteRxAudioStreamWillBeRemoved
Notifications.swift - added remoteTxAudioStreamHasBeenAdded & remoteTxAudioStreamWillBeRemoved


v2.5.1.2019_07_15

Api.swift - made clientName, clientId, clientStation, isGui, lowBw "public private(set)"
Api.swift - removed public var guiClients
RadioFactory.swift - refactored udpSocket(_:didReceive:fromAddress:withFilterContext:)